--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-/* * {
+* {
     outline: 1px solid #366;
-} */
+}
 
 .header {
     position: absolute;
@@ -279,6 +279,9 @@
 .main_bn .inner .itm {
     position: relative;
     width: 380px;
+
+    overflow: hidden;
+
 }
 
 .main_bn .inner .top {
@@ -295,6 +298,12 @@
     width: 100%;
 }
 
+.main_bn .inner .itm:hover img {
+    transform: scale(1.2);
+    transition: 0.5s;
+
+}
+
 .main_bn .inner .container {
     position: absolute;
     top: 0;
@@ -302,6 +311,8 @@
 
     padding: 30px;
     color: #f9f9f9;
+
+    z-index: 999;
 
 }
 
@@ -334,6 +345,8 @@
     bottom: 36px;
     right: 50px;
     transform: rotate(-45deg);
+
+    z-index: 999;
 }
 
 .main_bn .inner .itm .tit {
@@ -536,15 +549,92 @@
 
 }
 
-.mainMid .main_mid .inner .container span {
+.mainMid .main_mid .inner .container a {
     font-size: 30px;
     font-weight: 500;
     line-height: 40px;
 }
 
-.mainMid .main_mid .inner .container a {
+.mainMid .main_mid .inner .container strong {
+    position: relative;
     display: inline-block;
     width: 150px;
+
+}
+
+/* /////////////////////////////////////////// */
+.mainMid .main_mid .inner .container span {
+    position: absolute;
+    background: #f9f9f9;
+    transform-origin: center;
+}
+
+.mainMid .main_mid .inner .container .bottom {
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    height: 1px;
+
+    transform: scaleX(0);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.mainMid .main_mid .inner .container a:hover .bottom {
+    transform: scaleX(1);
+    opacity: 1;
+}
+
+.mainMid .main_mid .inner .container .right {
+    bottom: 0;
+    top: 0;
+    right: 0;
+
+    width: 1px;
+
+    transform: scaleY(0);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.mainMid .main_mid .inner .container a:hover .right {
+    transform: scaleY(1);
+    opacity: 1;
+}
+
+.mainMid .main_mid .inner .container .top {
+    top: 0;
+    left: 0;
+    right: 0;
+
+    height: 1px;
+
+    transform: scaleX(0);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.mainMid .main_mid .inner .container a:hover .top {
+    transform: scaleX(1);
+    opacity: 1;
+}
+
+.mainMid .main_mid .inner .container .left {
+    bottom: 0;
+    top: 0;
+    left: 0;
+
+    width: 1px;
+
+    transform: scaleY(0);
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.mainMid .main_mid .inner .container a:hover .left {
+    transform: scaleY(1);
+    opacity: 1;
 }
 
 .mainMid .main_mid .inner .container p {
@@ -593,6 +683,8 @@
 
 .main_PR .inner .miniwrap .left .itm {
     position: relative;
+    overflow: hidden;
+
 }
 
 .main_PR .inner .miniwrap .left .itm::after {
@@ -604,6 +696,8 @@
 
     bottom: 20%;
     left: 25px;
+    transition: 0.5s;
+    z-index: 999;
 
 }
 
@@ -618,7 +712,29 @@
     left: 95px;
 
     transform: translate(-50%, -50%) rotate(45deg);
+    transition: 0.5s;
+    z-index: 999;
 
+}
+
+.main_PR .inner .miniwrap .left .itm:hover img {
+    transform: scale(1.2);
+    transition: 0.5s;
+}
+
+.main_PR .inner .miniwrap .left .itm:hover::after {
+    bottom: 20%;
+    left: 45px;
+    z-index: 999;
+}
+
+.main_PR .inner .miniwrap .left .itm:hover::before {
+    bottom: 105px;
+    left: 115px;
+
+    transform: translate(-50%, -50%) rotate(45deg);
+
+    z-index: 999;
 
 }
 
@@ -630,6 +746,8 @@
     padding: 0 0 0 25px;
 
     color: #f9f9f9;
+
+    z-index: 999;
 
 }
 
@@ -644,10 +762,7 @@
     line-height: 1.2;
 }
 
-
-
-
-
+/* {right */
 .main_PR .inner .miniwrap .right {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -657,37 +772,127 @@
 }
 
 .main_PR .inner .miniwrap .right .box {
+    position: relative;
     height: 100%;
     background: #f0f0f0;
     color: #444;
     padding: 30px 20px;
 }
 
-.main_PR .inner .miniwrap .right .box .tit {
+
+
+
+
+
+.main_PR .inner .miniwrap .right .box::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 5px;
+    background: #07348c;
+    transition: 0.1s 0.4s;
+}
+
+.main_PR .inner .miniwrap .right a:hover .box::before {
+    width: 100%;
+    transition: 0.1s 0.1s;
+}
+
+.main_PR .inner .miniwrap .right .box::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    width: 5px;
+    height: 0;
+    background: #07348c;
+    transition: 0.1s 0.3s;
+}
+
+.main_PR .inner .miniwrap .right a:hover .box::after {
+    height: 100%;
+    transition: 0.1s 0.2s;
+}
+
+.main_PR .inner .miniwrap .right .tit::before {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    right: 0;
+    width: 0;
+    height: 5px;
+    background: #07348c;
+    transition: 0.1s 0.2s;
+
+}
+
+.main_PR .inner .miniwrap .right a:hover .tit::before {
+    width: 100%;
+    transition: 0.1s 0.3s;
+}
+
+.main_PR .inner .miniwrap .right .tit::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 5px;
+    height: 0;
+    background: #07348c;
+    transition: 0.1s 0.1s;
+
+}
+
+.main_PR .inner .miniwrap .right a:hover .tit::after {
+    height: 100%;
+    transition: 0.1s 0.4s;
+}
+
+
+.main_PR .inner .miniwrap .right .arrow {
+    font-size: 0;
     position: relative;
 }
 
-.main_PR .inner .miniwrap .right .box .tit::before {
+.main_PR .inner .miniwrap .right .arrow::before {
     position: absolute;
     content: "";
     width: 40px;
     height: 1px;
     background: #444;
 
-    bottom: -30px;
-    left: 0;
+    bottom: 30px;
+    left: 20px;
+    transition: 0.5s;
 
 }
 
-.main_PR .inner .miniwrap .right .box .tit::after {
+.main_PR .inner .miniwrap .right a:hover .arrow::before {
+    bottom: 30px;
+    left: 40px;
+
+}
+
+.main_PR .inner .miniwrap .right .arrow::after {
     position: absolute;
     content: "";
     width: 15px;
     height: 1px;
     background: #444;
 
-    bottom: -25px;
-    left: 35px;
+    bottom: 35px;
+    left: 55px;
+
+    transform: translate(-50%, -50%) rotate(45deg);
+    transition: 0.5s;
+
+}
+
+.main_PR .inner .miniwrap .right a:hover .arrow::after {
+    bottom: 35px;
+    left: 75px;
 
     transform: translate(-50%, -50%) rotate(45deg);
 
@@ -707,6 +912,8 @@
     font-weight: 700;
     margin: 0 0 20px 0;
 }
+
+
 
 
 
